--- a/ch02_descriptives.Rmd
+++ b/ch02_descriptives.Rmd
@@ -90,11 +90,11 @@ ethnicity_table <- tables::tabular(
     data = splt_dev_and_demog_task_sum)
 ```
 
-Data from four samples are used in this analysis. 
-The first two samples comprise foster-care-involved adolscents (FCA) and community adolescents (CA) who were recruited from the greater Eugene/Springfield area for an ongoing longitudinal study investigating decision-making related to health-risking behavior (funded by NIDA, P50 DA035763). 
+Data from four samples are used in these analyses. 
+The first two samples comprise foster-care-involved adolscents (FCA) and community adolescents (CA) who were recruited from the greater Eugene/Springfield, Oregon, area for an ongoing longitudinal study investigating decision-making related to health-risking behavior (funded by NIDA, P50 DA035763). 
 The third and forth samples consisted of college student young adults who completed the study for course credit either in person (CSYA sample), or online (CSYA-O sample). 
 The full sample consists of `r sum(!is.na(splt_dev_and_demog_task_sum$SID))` participants (`r sum(splt_dev_and_demog_task_sum$gender_num==1, na.rm=T)` male) with ages between `r round(min(splt_dev_and_demog_task_sum$age, na.rm = T), 1)` and `r round(max(splt_dev_and_demog_task_sum$age, na.rm = T), 1)` years (see Table \ref{tab:samplestats} for full details). 
-A single participant who was over the age of 25 years was excluded form analyses.
+A single participant who was over the age of 25 years was excluded from analyses.
 The majority of participants in all samples identified as white, though in both college samples this majority did not exceed 60% (Table \ref{tab:ethnicitytable}).
 Some participants in each sample did not provide data on all focal measures (see Table \ref{tab:missingstats}), and so sample sizes for each analysis will differ to some extent.
 Examining the table, it is clear that the proportion of missing data is small.
@@ -168,7 +168,7 @@ To assess pubertal development, all participants completed the Pubertal Developm
 While the full sample includes a wide range of pubertal development, there is notable heterogeneity.
 It is not surprising that almost all participants in the college samples report that puberty is complete.
 Notably (though also unsurprisingly), females in the the adolescent samples report being further through puberty than males (Figure \ref{fig:pdsplot}A), even though the mean age of males and females in these samples is roughly equivalent (Table \ref{tab:samplestats}).
-Most participants in the college samples have PDS scores indicating puberty is complete, or nearly completed (Figure \ref{fig:pdsplot}B).
+Most participants in the college samples have PDS scores indicating puberty is complete, or nearly completed (Figure \ref{fig:pdsplot}A).
 
 ```{r pdsplot, fig.width=6, fig.height=3.5, include = F}
 pds_plot_12$widths <- c(5.5, 3)
